fixed overflow for singles page

--- a/react-app/src/components/Home/home.css
+++ b/react-app/src/components/Home/home.css
@@ -51,11 +51,13 @@
 .group-name {
     font-weight: normal;
     overflow: scroll;
+    width: 700px;
 }
 
 
 .group-description {
     font-size: 18px;
+    height: 150px;
     overflow: auto;
 }
 
